--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask>=2.0.3,<3.0.0
-Flask-SQLAlchemy==2.6.1
+Flask==2.0.3
+Flask-SQLAlchemy==2.5.0
 mysql-connector-python==8.0.28
 matplotlib==3.4.3
 seaborn==0.11.2
